ui/src/index.css
/* Global styles for entire digital portfolio */
:root {
  --Speech_very_light_gray: #F9F9F9;
  --very-light-gray: #f5f7f9;
  --light-blue-gray: #f2f3f5;
  --Speech_light_gray: #E8E8E8;
  --light-gray: #cdcfd0;
  --light-blue-gray2: #ced4dc;
  --Speech_med_gray: #C1C1C1;
  --med-blue-gray: #7f8b97;
  --dark-blue-gray: #2d3f53;
  --sport-black: #0f0f0f;
  --dark-gray: #202428;
  --med-gray: #606060;

  --purple: #7a2aff;
  --purple2: #6600CC;

  --dark-blue: #035085;
  --Speech_dark_blue_gray: #576A76;
  --med-blue: #0378ab;
  --blue: #4542FF;
  --Speech_light_blue: #F4FAFF;

  --very-light-blue: #d3f4ff;
  --light-teal: #56afcc;
  --very-light-teal: #9dd4e6;
  --teal: #007CAD;

  --Speech_dark_green: #388485;
  --forest_green: #00843D;
  --Speech_green: #5CB85C;
  --Speech_light_green: #D9F2D0;

  --yellow: #faf678;

  --Speech_orange: #F8A503;
  --Speech_light_orange: #FCF8E3;

  /*--sand: #fef3e0; */
  --sand: #02203a;
  --Speech_red_error: #990D36;
  --Speech_red: #DA534F;
  --Speech_light_red: #fc8888;

  --berry: #C40D6F;

  --vocab-header-height: 53px;
  --vocab-terms-setting-section-height: 77px;
}

button {
  cursor: pointer;
}

.margin0 {
  margin: 0;
}

.center {
  text-align: center;
}

.centerWidth100 {
  text-align: center;
  width: 100%;
  display: block;
  font-size: 20px;
  margin: 20px 0
}

.width100 {
  width: 100%;
  margin: 0;
  display: block;
}

.width-limit-500 {
  max-width: 500px;
  width: 100%;
  margin: auto;
  display: flex;
  align-items: center;
}

.max-width310 {
  max-width: 310px;
}


.bold {
  font-weight: bold;
}

.italic {
  font-style: italic;
}

.github-icon {
  width: 80px;
  height: 80px;
}

.goal-and-github {
  margin: 0 0 16px 0;
}

.upside-down {
  transform: rotate(180deg);
}

.hidden, .clear {
  display: none;
}
html, body, #root {
  margin: 0;
  padding: 0;
  width: 100%;
  height: 100%;
  font-family: Arial, Helvetica, sans-serif;
}

.page-wrapper {
  display: flex;
  flex-direction: column;
  min-height: 100vh;
}

.content {
  flex: 1;
}

.small-text {
  font-size: 10px;
}

.med-text {
  font-size: 14px;
}

.sr-only {
  border: 0;
  clip: rect(1px, 1px, 1px, 1px);
  -webkit-clip-path: inset(50%);
  clip-path: inset(50%);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  width: 1px;
  white-space: nowrap;
}

h1, h2, h3 {
  margin: 0;
  text-align: center;
}

h1 {
  margin: 10px 0;
  color: var(--dark-blue);

  /* alternative outline
  color: white;
  text-shadow:
    -1px -1px 0 var(--dark-blue),
     1px -1px 0 var(--dark-blue),
    -1px  1px 0 var(--dark-blue),
     1px  1px 0 var(--dark-blue),
     0 4px 6px var(--dark-blue);
  -webkit-text-stroke: 3px var(--dark-blue);
  */

  font-size: 40px;
  font-family: "Courier New", monospace;
}

.white-background, .white-background a {
  background-color: white;
}

.sand-background, .sand-background a {
  background-color: var(--sand);
  color: var(--very-light-teal);
}

.dark-blue-background, .dark-blue-background a {
  background-color: var(--dark-blue);
  color: white;
}

.dark-blue {
  color: var(--dark-blue);
  fill: currentColor;
}

.light-teal {
  color: var(--very-light-teal);
  fill: currentColor;
}

.white {
  color: white;
  fill: currentColor;
}

.blue {
  color: var(--med-blue);
  fill: currentColor;
}

/* Styles for digital portfolio components */
.large-menu {
  margin: 0;
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 10px 1rem;
  flex-direction: row;
}

.hamburger-button {
  display: none;
}

.dropdown-menu {
  display: none;
}

.large-menu-home-button {
  font-size: 22px;
  font-weight: bold;
  text-decoration: none;
  margin: 0 0 0 20px;
}

.large-menu-project-button-group {
  display: flex;
  margin: 0;
  gap: 16px;
  text-align: center;
  font-size: 0.7em;
}

.large-menu-button {
  display: flex;
  flex-direction: column;
  align-items: center;
  text-decoration: none;
  width: 90px;
  padding: 5px;
  margin: 1px;
}

.large-menu-button-short {
  display: flex;
  flex-direction: column;
  align-items: center;
  text-decoration: none;
  width: 40px;
  padding: 5px;
  margin: 1px;
  justify-content: center;
  color: var(--dark-blue);
}

.large-menu-button:hover, .large-menu-button-short:hover {
  border: 1px solid var(--dark-blue);
  margin: 0;
}

.large-menu-icon {
  width: 70px;
  margin-bottom: 0.25rem;
  height: 70px;
}

.project-icon-row {
  display: flex;
  margin: 0;
  gap: 4rem;
  text-align: center;
  font-size: 0.7em;
  width: 100%;
  flex-direction: row;
  justify-content: center;
  align-items: center;
}

.about {
  background-color: var(--dark-blue);
  color: white;
}

.about-centered-row {
  padding: 20px 3em;
  max-width: 600px;
  margin: 0 auto;
}

/*
.reveal-from-left {
  opacity: 1;
  transform: translateX(-500px); /* start left */ /*
  transition: all 0.6s ease;
}

.reveal-from-left.active-left {
  opacity: 1;
  transform: translateX(0);
}

.reveal-from-right {
  opacity: 1;
  transform: translateX(500px); /* start right */
  /* transform: translateY(40px); */ /* start from bottom */ /*
  transition: all 0.6s ease;
}

.reveal-from-right.active-right {
  opacity: 1;
  transform: translateX(0);
} */

.avatar {
  width: 170px;
}

.centered-row {
  margin: 0;
  width: 100%;
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  gap: 1em;
}

.button-row {
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  gap: 0.3em;
}

.column {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  gap: 0.2em;
}

.two-column {
  display: flex;
  justify-content: center;
  align-items: center;
  gap: 0.2em;
}

.headline-desc-area {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
}

.headline {
  font-size: 30px;
  font-weight: bold;
  color: white;
  text-align: center;
}
/* ... */

